--- a/code/stats_viz.ipynb
+++ b/code/stats_viz.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,26 +30,26 @@
     "sfreq = 200\n",
     "path = op.join(Analysis_path, task, 'meg', 'Stats', str(start)+'_'+str(stop))\n",
     "filename = op.join(path, name+'-'+noise_cov+'.nc')\n",
-    "test_key = 'RS_vs_FA'\n",
-    "p_thresh = 0.05"
+    "test_key = 'RS_vs_OM+N'\n",
+    "p_thresh = 0.1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "<xarray.DataArray (data: 3, hemisphere: 2, time: 31, src: 10242)>\n",
-       "array([[[[ 0.030153, ...,  0.313315],\n",
+       "array([[[[-0.667514, ..., -0.723448],\n",
        "         ..., \n",
-       "         [-0.080442, ..., -0.462933]],\n",
+       "         [-0.131598, ...,  0.529988]],\n",
        "\n",
-       "        [[-0.456215, ..., -1.07273 ],\n",
+       "        [[-0.737492, ..., -1.294203],\n",
        "         ..., \n",
-       "         [ 0.84464 , ..., -0.440475]]],\n",
+       "         [-0.188281, ..., -0.538888]]],\n",
        "\n",
        "\n",
        "       ..., \n",
@@ -61,13 +61,13 @@
        "         ..., \n",
        "         [ 0.      , ...,  0.      ]]]])\n",
        "Coordinates:\n",
-       "  * hemisphere  (hemisphere) object 'left' 'right'\n",
+       "  * data        (data) object 'T_stat' 'p_val' 'clu_inds'\n",
        "  * time        (time) float64 0.35 0.355 0.36 0.365 0.37 0.375 0.38 0.385 ...\n",
-       "  * src         (src) int64 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 ...\n",
-       "  * data        (data) object 'T_stat' 'p_val' 'clu_inds'"
+       "  * hemisphere  (hemisphere) object 'left' 'right'\n",
+       "  * src         (src) int64 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 ..."
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
    "source": [
     "if np.where(stats.loc['p_val', 'left']<p_thresh)[0].any():\n",
     "    t_signif_lh = np.unique(np.where(stats.loc['p_val', 'left']<p_thresh)[0], return_counts=True)\n",
-    "    best_t_lh = t_signif_lh[0][t_signif_lh[1].argsort()][::-1]\n",
+    "    best_t_lh = stats.time[t_signif_lh[0][t_signif_lh[1].argsort()][::-1]]\n",
     "    print(t_signif_lh)\n",
     "    print(best_t_lh)\n",
     "else:\n",
@@ -106,24 +106,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\adorb\\WinPython-64bit-3.6.3.0Qt5\\python-3.6.3.amd64\\lib\\site-packages\\ipykernel_launcher.py:7: UserWarning: \n",
-      "No significant cluster for right hemisphere.\n",
-      "\n",
-      "  import sys\n"
+      "(array([10, 11], dtype=int64), array([ 13, 180], dtype=int64))\n",
+      "<xarray.DataArray 'time' (time: 2)>\n",
+      "array([ 0.405,  0.4  ])\n",
+      "Coordinates:\n",
+      "  * time     (time) float64 0.405 0.4\n"
      ]
     }
    ],
    "source": [
     "if np.where(stats.loc['p_val', 'right']<p_thresh)[0].any():\n",
-    "    t_signif_rh = np.unique(np.where(stats.loc['p_val', 'left']<p_thresh)[0], return_counts=True)\n",
-    "    best_t_rh = t_signif_rh[0][t_signif_rh[1].argsort()][::-1]\n",
+    "    t_signif_rh = np.unique(np.where(stats.loc['p_val', 'right']<p_thresh)[0], return_counts=True)\n",
+    "    best_t_rh = stats.time[t_signif_rh[0][t_signif_rh[1].argsort()][::-1]]\n",
     "    print(t_signif_rh)\n",
     "    print(best_t_rh)\n",
     "else:\n",
@@ -133,23 +134,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t = 0.405 s\n"
+     ]
+    }
+   ],
    "source": [
-    "t = int((best_t_rh[0] if best_t_rh[0] is not None else best_t_lh[0]))\n",
+    "t = float(best_t_rh[0] if best_t_rh[0] is not None else best_t_lh[0])\n",
     "#t = int(best_t_rh[8])\n",
     "#t = int(best_t_lh[0])\n",
-    "print('t =', (t+start*sfreq)/sfreq)\n",
-    "mask_lh = np.where(pv_lh[t]<p_thresh)\n",
-    "mask_rh = np.where(pv_rh[t]<p_thresh)\n",
-    "lh = np.where(pv_lh[t]<p_thresh, data_lh[t], 0)\n",
-    "rh = np.where(pv_rh[t]<p_thresh, data_rh[t], 0)"
+    "print('t =', t, 's')\n",
+    "mask_lh = np.where(stats.loc['p_val', 'left', t] < p_thresh)\n",
+    "mask_rh = np.where(stats.loc['p_val', 'right', t] < p_thresh)\n",
+    "lh = np.where(stats.loc['p_val', 'left', t] < p_thresh, stats.loc['T_stat', 'left', t].values, 0)\n",
+    "rh = np.where(stats.loc['p_val', 'right', t] < p_thresh, stats.loc['T_stat', 'right', t].values, 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,22 +168,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[1;37mINFO\u001b[0m | BrainObj(name='inflated') created\n",
+      "\u001b[1m\u001b[1;37mINFO\u001b[0m | Add data to secific vertices.\n",
+      "\u001b[1m\u001b[1;37mINFO\u001b[0m | Add data to secific vertices.\n",
+      "\u001b[1m\u001b[1;37mINFO\u001b[0m | VolumeObj(name='brodmann') created\n",
+      "\u001b[1m\u001b[1;37mINFO\u001b[0m | RoiObj(name='brodmann') created\n",
+      "\u001b[1m\u001b[1;37mINFO\u001b[0m | brodmann ROI loaded.\n",
+      "\u001b[1m\u001b[1;37mINFO\u001b[0m | CrossSecObj(name='brodmann') created\n"
+     ]
+    }
+   ],
    "source": [
     "b_obj = BrainObj('inflated', translucent=False, hemisphere='both')#, sulcus=True)\n",
     "\n",
     "#b_obj.add_activation(data=data_lh[t], vertices=vertices, hemisphere='left', cmap='bwr', clim=clim)\n",
     "#b_obj.add_activation(data=data_rh[t], vertices=vertices, hemisphere='right', cmap='bwr', clim=clim)\n",
-    "#b_obj.add_activation(data=data_lh[t][mask_lh], vertices=vertices[mask_lh], hemisphere='left', cmap='bwr', clim=clim)\n",
-    "#b_obj.add_activation(data=data_rh[t][mask_rh], vertices=vertices[mask_rh], hemisphere='right', cmap='bwr', clim=clim)\n",
     "#b_obj.add_activation(data=np.where(pv_lh[t]>=0.05, -np.inf, data_lh[t]), hide_under=clim[0], vertices=vertices, hemisphere='left', cmap='bwr', clim=clim)\n",
     "#b_obj.add_activation(data=np.where(pv_lh[t]>=0.05, -np.inf, data_rh[t]), hide_under=clim[0], vertices=vertices, hemisphere='right', cmap='bwr', clim=clim)\n",
-    "#b_obj.add_activation(data=np.where(pv_lh[t]<0.05, data_lh[t], 0), vertices=vertices, hemisphere='left', cmap='bwr', clim=clim)\n",
-    "#b_obj.add_activation(data=np.where(pv_rh[t]<0.05, data_lh[t], 0), vertices=vertices, hemisphere='right', cmap='bwr', clim=clim)\n",
-    "b_obj.add_activation(data=lh, vertices=vertices, hemisphere='left', cmap='bwr', clim=clim)\n",
-    "b_obj.add_activation(data=rh, vertices=vertices, hemisphere='right', cmap='bwr', clim=clim)\n",
+    "b_obj.add_activation(data=lh, vertices=stats.src.values, hemisphere='left', smoothing_steps=4, cmap='bwr', clim=clim)\n",
+    "b_obj.add_activation(data=rh, vertices=stats.src.values, hemisphere='right', smoothing_steps=4, cmap='bwr', clim=clim)\n",
     "\n",
     "\n",
     "vb = Brain(brain_obj=b_obj)\n",
@@ -183,25 +202,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "vb.show()\n",
     "vb.cbar_select('brain')\n",
-    "vb.cbar_control('brain', cblabel='{} (t = {} s)'.format(test_key, (t+start*sfreq)/sfreq))\n",
-    "vb.rotate(custom=(180, -45))\n",
+    "vb.cbar_control('brain', cblabel='{} (t = {} s)'.format(test_key, t))\n",
+    "vb.rotate(custom=(90, 0))\n",
     "#cb.show()\n",
     "#sc.preview()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[1;33mWARNING\u001b[0m | dpi parameter is not active if `print_size` is None. Use for example `print_size=(5, 5)`\n",
+      "\u001b[1m\u001b[1;37mINFO\u001b[0m | Image of size (1761, 1588)px successfully saved (Z:\\meditation\\ERC\\Analyses\\SMEG\\meg\\Stats\\0.35_0.5\\RS_vs_OM+N_t_0.405.png)\n"
+     ]
+    }
+   ],
    "source": [
-    "vb.screenshot(op.join(path,test_key+'_t_'+str((t+start*sfreq)/sfreq)+'.png'))"
+    "vb.screenshot(op.join(path,'{}_t_{}.png'.format(test_key, t)))"
    ]
   },
   {
