Heartbeat Evoked Response stats

--- a/code/stats.ipynb
+++ b/code/stats.ipynb
@@ -60,9 +60,60 @@
     "noise_cov = 'baseline_cov'\n",
     "stc_ext = '-lh.stc'\n",
     "sfreq = 200\n",
+    "surface = 'ico4'\n",
     "start = None\n",
     "stop = None\n",
     "stc_path = op.join(Analysis_path, task, 'meg', 'SourceEstimate')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.DataArray (state: 3, subject: 34, time: 30, src: 20484)>\n",
+       "array([[[[7.810948e-01, ..., 4.181406e-03],\n",
+       "         ...,\n",
+       "         [8.875490e-01, ..., 1.067179e+00]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[2.317508e+00, ..., 1.940817e+00],\n",
+       "         ...,\n",
+       "         [1.380180e+00, ..., 6.799102e+00]]],\n",
+       "\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "\n",
+       "       [[[1.652794e+00, ..., 6.170549e-01],\n",
+       "         ...,\n",
+       "         [9.672354e-01, ..., 1.057426e+00]],\n",
+       "\n",
+       "        ...,\n",
+       "\n",
+       "        [[1.563739e+00, ..., 6.617996e-01],\n",
+       "         ...,\n",
+       "         [1.050953e+00, ..., 1.335383e+00]]]])\n",
+       "Coordinates:\n",
+       "  * src      (src) object 'lh_0' 'lh_1' 'lh_2' 'lh_3' 'lh_4' 'lh_5' 'lh_6' ...\n",
+       "  * state    (state) object 'RS' 'FA' 'OM'\n",
+       "  * subject  (subject) object '002' '004' '007' '010' '012' '014' '016' ...\n",
+       "  * time     (time) float64 0.05 0.055 0.06 0.065 0.07 0.075 0.08 0.085 0.09 ..."
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_file = op.join(stc_path, 'fsaverage', 'DATASET-{}-surface_{}-{}Hz.nc'.format(noise_cov, surface, sfreq))\n",
+    "stc = xr.open_dataarray(data_file, name)\n",
+    "stc.load()"
    ]
   },
   {
@@ -156,15 +207,16 @@
    "source": [
     "def cluster_perm_test(X1, X2, stat_file, test_key, times, vertices, mode='a', p_threshold=0.01, connectivity='ico5', paired=False):\n",
     "    \"\"\"\n",
-    "    If paired, test X2-X1.\n",
+    "    If paired, test X1-X2.\n",
     "    Input: arrays of shape (subjects, time, space)\n",
     "    \"\"\"\n",
     "    if type(connectivity) is str:\n",
     "        connectivity = mne.spatial_tris_connectivity(mne.grade_to_tris(int(connectivity[-1])))\n",
     "    \n",
     "    if paired:\n",
-    "        t_threshold = -t.ppf(p_threshold / 2, (X2-X1).shape[0] - 1)\n",
-    "        T_obs, clusters, cluster_pv, H0 = spatio_temporal_cluster_1samp_test((X2-X1), connectivity=connectivity, threshold=t_threshold, n_jobs=4)\n",
+    "        X = X1 - X2\n",
+    "        t_threshold = -t.ppf(p_threshold / 2, X.shape[0] - 1)\n",
+    "        T_obs, clusters, cluster_pv, H0 = spatio_temporal_cluster_1samp_test(X, connectivity=connectivity, threshold=t_threshold, n_jobs=4)\n",
     "    else:\n",
     "        f_threshold = f.ppf(1 - p_threshold / 2, X1.shape[0] - 1, X2.shape[0] - 1)\n",
     "        T_obs, clusters, cluster_pv, H0 = spatio_temporal_cluster_test([X1,X2], connectivity=connectivity, threshold=f_threshold, n_jobs=4)\n",
@@ -228,7 +280,114 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "start = 0.1#stc.time.values[0]\n",
+    "stop = 0.2#stc.time.values[-1]\n",
+    "vertno = np.arange(stc.shape[-1]/2, dtype=int)\n",
+    "\n",
+    "stat_path = op.join(Analysis_path, task, 'meg', 'Stats', '{}_{}'.format(round(start,4),round(stop,4)))\n",
+    "if not op.isdir(stat_path):\n",
+    "    os.makedirs(stat_path)\n",
+    "stat_file = op.join(stat_path, '{}-{}-surface_{}-{}Hz.nc'.format(name, noise_cov, surface, sfreq))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "T_obs=dict(); clusters=dict(); cluster_pv=dict(); H0=dict(); mask=dict()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Heartbeat Evoked Response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stat_fun(H1): min=2.469534 max=41.924578\n",
+      "Running initial clustering\n",
+      "Found 2 clusters\n",
+      "Permuting 1023 times...\n",
+      "[....................................... ] 99.22481 |    "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  3.2min remaining:  3.2min\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[...................................     ] 87.84314 \\    Computing cluster p-values\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  3.9min remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  3.9min finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_key = 'HER'\n",
+    "#X1 = stc.values.reshape((np.multiply(*stc.shape[0:2]),*stc.shape[2:]))\n",
+    "X1 = stc.values.mean(axis=0)\n",
+    "X2 = np.zeros(X1.shape)\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(X1, X2, stat_file=stat_file, test_key=test_key, times=stc.time.values, vertices=vertno, connectivity=connectivity, paired=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X1 = stc.values.mean(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(34, 30, 20484)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X1.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# States tests"
    ]
   },
   {
@@ -804,15 +963,6 @@
    "source": [
     "t0 = time.perf_counter()\n",
     "ti = t0\n",
-    "start = 0.1#float(stc.time[0])\n",
-    "stop = 0.2#float(stc.time[-1])\n",
-    "vertno = np.arange(stc.shape[-1]/2, dtype=int)\n",
-    "\n",
-    "stat_path = op.join(Analysis_path, task, 'meg', 'Stats', '{}_{}'.format(round(start,4),round(stop,4)))\n",
-    "if not op.isdir(stat_path):\n",
-    "    os.makedirs(stat_path)\n",
-    "stat_file = op.join(stat_path, name+'-'+noise_cov+'.nc')\n",
-    "\n",
     "test_key = 'RS_vs_FA'\n",
     "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc.loc['RS',:,start:stop].values, stc.loc['FA',:,start:stop].values, stat_file=stat_file, test_key=test_key, times=stc.time.loc[start:stop], vertices=vertno, connectivity=connectivity, paired=True)\n",
     "print('\\t',test_key, time.perf_counter()-ti,'\\n\\t*****\\n')\n",
