--- a/code/stats_viz.ipynb
+++ b/code/stats_viz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,18 +27,54 @@
     "noise_cov = 'baseline_cov'\n",
     "start = 0.1\n",
     "stop = 0.2\n",
+    "surface = 'ico4'\n",
     "sfreq = 200\n",
     "path = op.join(Analysis_path, task, 'meg', 'Stats', str(start)+'_'+str(stop))\n",
-    "filename = op.join(path, name+'-'+noise_cov+'.nc')\n",
-    "test_key = 'RS_vs_OM+N'\n",
+    "filename = op.join(path, '{}-{}-surface_{}-{}Hz.nc'.format(name, noise_cov, surface, sfreq))\n",
+    "test_key = 'HER_0.0001'\n",
     "p_thresh = 0.05"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.DataArray (data: 3, hemisphere: 2, time: 30, src: 10242)>\n",
+       "array([[[[ 7.993716, ...,  5.745473],\n",
+       "         ...,\n",
+       "         [10.239217, ...,  6.573741]],\n",
+       "\n",
+       "        [[10.370866, ...,  6.368161],\n",
+       "         ...,\n",
+       "         [17.312774, ...,  7.769947]]],\n",
+       "\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "\n",
+       "       [[[ 1.      , ...,  1.      ],\n",
+       "         ...,\n",
+       "         [ 1.      , ...,  1.      ]],\n",
+       "\n",
+       "        [[ 3.      , ...,  3.      ],\n",
+       "         ...,\n",
+       "         [ 3.      , ...,  3.      ]]]])\n",
+       "Coordinates:\n",
+       "  * data        (data) object 'T_stat' 'p_val' 'clu_inds'\n",
+       "  * time        (time) float64 0.05 0.055 0.06 0.065 0.07 0.075 0.08 0.085 ...\n",
+       "  * src         (src) int64 0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 ...\n",
+       "  * hemisphere  (hemisphere) object 'left' 'right'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "stats = xr.open_dataarray(filename, test_key)\n",
     "stats.load()"
@@ -53,9 +89,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+      "       17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29]), array([20471, 20460, 20465, 20460, 20455, 20458, 20468, 20457, 20478,\n",
+      "       20479, 20484, 20481, 20482, 20482, 20479, 20480, 20481, 20478,\n",
+      "       20482, 20481, 20484, 20482, 20482, 20482, 20479, 20483, 20483,\n",
+      "       20481, 20481, 20480]))\n",
+      "<xarray.DataArray 'time' (time: 30)>\n",
+      "array([0.15 , 0.1  , 0.18 , 0.175, 0.155, 0.115, 0.14 , 0.11 , 0.16 , 0.165,\n",
+      "       0.105, 0.145, 0.13 , 0.19 , 0.185, 0.125, 0.195, 0.095, 0.12 , 0.17 ,\n",
+      "       0.135, 0.09 , 0.05 , 0.08 , 0.06 , 0.065, 0.055, 0.075, 0.085, 0.07 ])\n",
+      "Coordinates:\n",
+      "  * time     (time) float64 0.15 0.1 0.18 0.175 0.155 0.115 0.14 0.11 0.16 ...\n"
+     ]
+    }
+   ],
    "source": [
     "if np.where(stats.loc['p_val']<p_thresh)[1].any():\n",
     "    t_signif = np.unique(np.where(stats.loc['p_val']<p_thresh)[1], return_counts=True)\n",
@@ -184,9 +238,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+      "       17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29]), array([9184, 9402, 9189, 9351, 9257, 9384, 9353, 9569, 9612, 9657, 9683,\n",
+      "       9793, 9832, 9875, 9874, 9897, 9867, 9904, 9923, 9936, 9923, 9885,\n",
+      "       9886, 9921, 9922, 9974, 9953, 9943, 9880, 9834]))\n",
+      "<xarray.DataArray 'time' (time: 30)>\n",
+      "array([0.175, 0.18 , 0.185, 0.145, 0.15 , 0.14 , 0.17 , 0.165, 0.135, 0.125,\n",
+      "       0.16 , 0.155, 0.19 , 0.115, 0.12 , 0.13 , 0.195, 0.11 , 0.105, 0.1  ,\n",
+      "       0.095, 0.09 , 0.085, 0.055, 0.075, 0.08 , 0.065, 0.07 , 0.06 , 0.05 ])\n",
+      "Coordinates:\n",
+      "  * time     (time) float64 0.175 0.18 0.185 0.145 0.15 0.14 0.17 0.165 ...\n"
+     ]
+    }
+   ],
    "source": [
     "if np.where(stats.loc['p_val', 'left']<p_thresh)[0].any():\n",
     "    t_signif_lh = np.unique(np.where(stats.loc['p_val', 'left']<p_thresh)[0], return_counts=True)\n",
@@ -200,9 +271,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16,\n",
+      "       17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29]), array([8727, 8929, 8590, 8772, 8686, 8693, 8837, 9054, 9207, 9249, 9390,\n",
+      "       9499, 9546, 9554, 9552, 9565, 9582, 9590, 9626, 9659, 9638, 9627,\n",
+      "       9592, 9591, 9604, 9675, 9644, 9631, 9583, 9563]))\n",
+      "<xarray.DataArray 'time' (time: 30)>\n",
+      "array([0.175, 0.145, 0.18 , 0.15 , 0.185, 0.155, 0.14 , 0.17 , 0.16 , 0.165,\n",
+      "       0.135, 0.19 , 0.13 , 0.125, 0.195, 0.115, 0.12 , 0.11 , 0.105, 0.1  ,\n",
+      "       0.095, 0.09 , 0.085, 0.055, 0.08 , 0.065, 0.05 , 0.075, 0.07 , 0.06 ])\n",
+      "Coordinates:\n",
+      "  * time     (time) float64 0.175 0.145 0.18 0.15 0.185 0.155 0.14 0.17 0.16 ...\n"
+     ]
+    }
+   ],
    "source": [
     "if np.where(stats.loc['p_val', 'right']<p_thresh)[0].any():\n",
     "    t_signif_rh = np.unique(np.where(stats.loc['p_val', 'right']<p_thresh)[0], return_counts=True)\n",
@@ -216,9 +304,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t = 0.175 s\n"
+     ]
+    }
+   ],
    "source": [
     "t = float(best_t_rh[0] if best_t_rh[0] is not None else best_t_lh[0])\n",
     "#t = float(best_t_rh[3])\n",
@@ -233,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,9 +339,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m\u001b[1;37mINFO\u001b[0m | BrainObj(name='inflated') created\n",
+      "\u001b[1m\u001b[1;37mINFO\u001b[0m | File already dowloaded (/home/benjamin.ador/.local/lib/python3.5/site-packages/visbrain/data/templates/sulcus.npy).\n",
+      "\u001b[1m\u001b[1;37mINFO\u001b[0m | Add data to secific vertices.\n",
+      "\u001b[1m\u001b[1;37mINFO\u001b[0m | Add data to secific vertices.\n",
+      "\u001b[1m\u001b[1;37mINFO\u001b[0m | VolumeObj(name='brodmann') created\n",
+      "\u001b[1m\u001b[1;37mINFO\u001b[0m | RoiObj(name='brodmann') created\n",
+      "\u001b[1m\u001b[1;37mINFO\u001b[0m | brodmann ROI loaded.\n",
+      "\u001b[1m\u001b[1;37mINFO\u001b[0m | CrossSecObj(name='brodmann') created\n"
+     ]
+    }
+   ],
    "source": [
     "b_obj = BrainObj('inflated', translucent=False, hemisphere='both', sulcus=True)\n",
     "\n",
@@ -261,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
