New stat viz + coding stats on evoked and recoding src_rec

--- a/code/stats.ipynb
+++ b/code/stats.ipynb
@@ -2,23 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-31T16:28:38.455672Z",
      "start_time": "2018-05-31T16:28:38.029386Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (csv_io.py, line 228)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"csv_io.py\"\u001b[0;36m, line \u001b[0;32m228\u001b[0m\n\u001b[0;31m    def get_chan_name(subject, chan_type:\"'ecg_chan', 'eogH_chan', 'eogV_chan', 'respi_chan', 'egg_chans', 'emgTrap_chan', 'bad'\", data=None):\u001b[0m\n\u001b[0m                                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from header import *\n",
     "import psutil\n",
@@ -33,26 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-05-31T16:28:49.581843Z",
      "start_time": "2018-05-31T16:28:49.549387Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'time' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-7624d73d300e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mperf_counter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtask\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'SMEG'\u001b[0m \u001b[0;31m#'MIMOSA'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mstates\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'RS'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'FA'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'OM'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0msubjects\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_subjlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtask\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0msubjects\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msubjects\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0msubjects\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'109'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'time' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "t0 = time.perf_counter()\n",
     "task = 'SMEG' #'MIMOSA'\n",
@@ -232,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,6 +220,9 @@
     "    If paired, test X1-X2.\n",
     "    Input: arrays of shape (subjects, time, space)\n",
     "    \"\"\"\n",
+    "    if not isinstance(X2, (np.ndarray, xr.DataArray)):\n",
+    "        X2 = np.zeros(X1.shape)\n",
+    "    \n",
     "    if type(connectivity) is str:\n",
     "        connectivity = mne.spatial_tris_connectivity(mne.grade_to_tris(int(connectivity[-1])))\n",
     "    \n",
@@ -289,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1081,25 +1063,228 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = ['T_ECG_included', 'T_ECG_excluded']#'R_ECG_included', 'R_ECG_excluded', \n",
+    "name = names[1]\n",
+    "noise_cov = 'empty_room_cov'\n",
+    "sfreq = 200\n",
+    "win = (-.175,-.075)#(.1,.2)\n",
+    "surface = 'ico4'\n",
+    "\n",
+    "stc = dict()\n",
+    "for i,w in enumerate([(-.175,-.075),(.1,.2)]):\n",
+    "    data_file = op.join(Analysis_path, task, 'meg', 'SourceEstimate', 'fsaverage', 'DATASET-{}-surface_{}-{}_{}-{}Hz.nc'.format(noise_cov, surface, *w, sfreq))\n",
+    "    stc[i] = xr.open_dataarray(data_file, name)\n",
+    "    stc[i].load()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T_obs=dict(); clusters=dict(); cluster_pv=dict(); H0=dict(); mask=dict()\n",
+    "vertno = np.arange(stc[0].shape[-1]/2, dtype=int)\n",
+    "\n",
+    "stat_path = op.join(Analysis_path, task, 'meg', 'Stats', 'baseline')\n",
+    "os.makedirs(stat_path, exist_ok=True)\n",
+    "stat_file = op.join(stat_path, '{}-{}-surface_{}-{}Hz-baseline.nc'.format(name, noise_cov, surface, sfreq))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stat_fun(H1): min=-6.246160 max=4.544122\n",
+      "Running initial clustering\n",
+      "Found 833 clusters\n",
+      "Permuting 1023 times...\n",
+      "[....................................................        ] 87.84%  \\   "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.6min remaining:  1.6min\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[........................................................... ] 99.22%  |   "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.7min remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.7min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing cluster p-values\n",
+      "Done.\n",
+      "stat_fun(H1): min=-6.274703 max=4.519974\n",
+      "Running initial clustering\n",
+      "Found 908 clusters\n",
+      "Permuting 1023 times...\n",
+      "[....................................................        ] 86.82%  \\   "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.6min remaining:  1.6min\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[........................................................... ] 99.22%  |   Computing cluster p-values\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.8min remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.8min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "stat_fun(H1): min=-5.305635 max=4.552568\n",
+      "Running initial clustering\n",
+      "Found 779 clusters\n",
+      "Permuting 1023 times...\n",
+      "[....................................................        ] 86.82%  \\   "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   2 out of   4 | elapsed:  1.7min remaining:  1.7min\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[........................................................... ] 99.22%  |   Computing cluster p-values\n",
+      "Done.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.7min remaining:    0.0s\n",
+      "[Parallel(n_jobs=4)]: Done   4 out of   4 | elapsed:  1.7min finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_key = 'RS'\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc[1].loc['RS'].values, stc[0].loc['RS'].values, stat_file=stat_file, test_key=test_key, times=stc[0].time, vertices=vertno, connectivity=connectivity, paired=True)\n",
+    "test_key = 'FA'\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc[1].loc['FA'].values, stc[0].loc['FA'].values, stat_file=stat_file, test_key=test_key, times=stc[0].time, vertices=vertno, connectivity=connectivity, paired=True)\n",
+    "test_key = 'OM'\n",
+    "T_obs[test_key], clusters[test_key], cluster_pv[test_key], H0[test_key], mask[test_key] = cluster_perm_test(stc[1].loc['OM'].values, stc[0].loc['OM'].values, stat_file=stat_file, test_key=test_key, times=stc[0].time, vertices=vertno, connectivity=connectivity, paired=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([ 69,  89, 542]),)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.where(cluster_pv['RS']<.05)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<xarray.DataArray (subject: 34, src: 20484)>\n",
+       "array([[2.37306 , 1.696341, 3.529889, ..., 2.886893, 3.207413, 2.751317],\n",
+       "       [2.324931, 1.286636, 1.51721 , ..., 1.233803, 1.103661, 1.174413],\n",
+       "       [2.377474, 1.439882, 2.830985, ..., 2.476919, 1.916404, 1.548704],\n",
+       "       ...,\n",
+       "       [2.62893 , 1.627037, 2.284074, ..., 3.301421, 3.124422, 3.016373],\n",
+       "       [3.083837, 1.737603, 2.911273, ..., 8.036479, 7.920109, 8.024152],\n",
+       "       [4.240587, 2.741448, 4.787344, ..., 4.448674, 2.132878, 1.897463]])\n",
+       "Coordinates:\n",
+       "  * subject  (subject) object '002' '004' '007' '010' '012' '014' '016' ...\n",
+       "  * src      (src) object 'lh_0' 'lh_1' 'lh_2' 'lh_3' 'lh_4' 'lh_5' 'lh_6' ...\n",
+       "    state    <U2 'RS'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stc[0].loc['RS'].mean(dim='time')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.5.2"
   },
   "toc": {
    "base_numbering": 1,
